# agent-foundry

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  Dockerfile  LICENSE  Makefile  README.md  agent-foundry.code-workspace  docker-compose.yaml  env-sample.txt  main.py  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
actors/: analyzer.py  base.py  editor.py  extractor.py  manager.py  planner.py  researcher.py  writer.py
bruno/: bruno.json  collection.bru  reader.js
bruno/api/: folder.bru  health.bru  status.bru  task-form-large.bru  task-form-small.bru  task-form.bru  task-json.bru
bruno/environments/: ferros.dev.bru  ferros.local.bru  ferros.vm.bru
bruno/mcp/: folder.bru  health.bru  save-file.bru  send-update.bru
bruno/status/: folder.bru
bruno/task/: folder.bru  task-form.bru  task-json.bru
config/: analyzer.yaml.j2  editor.yaml.j2  evaluator.yaml.j2  extractor.yaml.j2  researcher.yaml.j2  writer.yaml.j2
core/: config.py  models.py
deploy/: Make.in  Makefile  agent-foundry.service  create-certbot-cert.sh  create-nginx-conf-apps.sh  create-nginx-conf.sh  deploy.sh  docker-compose.yaml  docker-registry.service  install-docker.sh  install-packages.sh  setup.sh  start-docker-registry.sh  start-foundry-service.sh
memory/: redis_memory.py
notebooks/: test.ipynb  test_websockets.ipynb
notes/: openai-models.txt
samples/: files.json
samples/generic/: _task.yaml  us_symbols.csv
samples/mortgage/: _task-new.old.yaml  _task-new.yaml  _task.yaml
samples/research/: _task.yaml
src/: cmd.py  commands.py  main.py  mcps.py
src/actors/: analyzer.py  base.py  builder.py  constants.py  context_builder.py  editor.py  evaluator.py  executors.py  extractor.py  manager.py  planner.py  researcher.py  writer.py
src/actors/misc/: analyzer.py  editor.py  evaluator.py  extractor.py  researcher.py  writer.py
src/actors/prompts/: planner.md  re_planner.md  tasks.md
src/core/: config.py  config.yaml.j2  constants.py  models.py  processor.py  utils.py  validate.py
src/ferros/: app.py  cli.py  main.py
src/ferros/agents/: builder.py  evaluator.py  executor.py  executors.py  factory.py  manager.py  planner.py  registry.py  runner.py  utils.py
src/ferros/agents/prompts/: context-builder.md  evaluator.md  planner.md  re-planner.md  tasks.md
src/ferros/core/: config.yaml.j2  finalize.py  logging.py  parsers.py  printer.py  store.py  stream.py  tracing.py  utils.py  viewer.py
src/ferros/messaging/: constants.py  consumer.py  producer.py  streamer.py
src/ferros/models/: agent.py  agents.py  context.py  evaluate.py  evaluation.py  plan.py  settings.py  task.py
src/ferros/runtime/: openai.py
src/ferros/tools/: evaluation.py  mcps.py  web_search.py
src/memory/: redis_memory.py
src/tools/: context_parser.py  mcp_servers.py  redis_memory.py  web_search.py
src/tracing/: agent_run.py  chat_completion.py  custom_span.py  function_call.py  mcp_tool_list.py  trace_app.py
